--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,6 @@ poetry.toml
 .ruff_cache/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,osx
+
+# Thonburian Whisper virtual environment
+longform_transcription/Thonburian_venv
